<resources>
    <string name="app_name">Space Cow Notes</string>
    <string name="login">Login</string>
    <string name="hint_title">Title</string>
    <string name="hint_message">Message</string>
    <string name="hint_gps_location">GPS Location</string>
    <string name="image_description">Location Image</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="note_deleted">Note deleted</string>
    <string name="delete_message">Do you really want to delete this GPS note?</string>
    <string name="gps_location_changed">Your GPS location changed</string>
    <string name="gps_location_changed_question">Do you want to apply the new location to this note?</string>
    <string name="map_image">Picture or Photo</string>
    <string name="no_image_selected">"No image selected</string>
    <string name="edit_note">Space Cow Notes</string>
    <string name="no_title">No title</string>
</resources>