<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/background_listitem"
    app:cardCornerRadius="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="horizontal"
        android:padding="15dp"
        tools:context=".OverviewActivity">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:layout_gravity="left"
            android:layout_weight="10"
            >

            <TextView
                android:id="@+id/tvTitle"
                style="@style/ListItem.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_title" />

            <TextView
                android:id="@+id/tvMessage"
                style="@style/ListItem.Message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_message" />

            <TextView
                android:id="@+id/tvGPSLocation"
                style="@style/ListItem.Message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_gps_location" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="10dp"
            android:layout_gravity="right"
            >

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:background="@color/white"
                android:contentDescription="@string/image_description"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>



    </LinearLayout>
</androidx.cardview.widget.CardView>