<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OverviewActivity"
    android:background="@color/background"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="@drawable/bg">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:titleTextColor="@color/toolbar_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical"
            android:padding="15dp"
            android:layout_marginTop="60dp"
            >
            <LinearLayout
                android:id="@+id/loadingContainer"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical">
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:layout_marginTop="50dp"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/ivMap"
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:src="@drawable/loadinglocation"
                android:scaleType="centerCrop"
                android:layout_marginVertical="10dp"
                android:contentDescription="@string/map_image"
                />

            <EditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginVertical="10dp"
                android:padding="10dp"
                android:background="@color/background_edittext"
                android:textColor="@color/white"
                android:hint="@string/hint_title"
                android:textColorHint="@color/hint_text"/>

            <EditText
                android:id="@+id/etMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginVertical="10dp"
                android:padding="10dp"
                android:background="@color/background_edittext"
                android:textColor="@color/white"
                android:hint="@string/hint_message"
                android:textColorHint="@color/hint_text"/>

            <ImageButton
                android:id="@+id/ibImage"
                android:layout_width="fill_parent"
                android:layout_height="250dp"
                android:scaleType="fitCenter"
                android:layout_marginVertical="10dp"
                android:contentDescription="@string/image_description"
                android:text="Click to select an image"
                android:background="@color/background_edittext"/>
                <!--android:src="@drawable/ic_add_photo_alternate"-->

        </LinearLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbFooter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:titleTextColor="@color/toolbar_text"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            >



            <ImageButton
                android:id="@+id/ib_footer_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_photo_size_select_actual"
                android:padding="25dp"
                android:layout_marginHorizontal="35dp"
                android:layout_gravity="center"/>


            <ImageButton
                android:id="@+id/ib_footer_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_delete"
                android:padding="25dp"
                android:layout_marginHorizontal="35dp"
                android:layout_gravity="center"/>

        </androidx.appcompat.widget.Toolbar>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>